Refactor command handling and color management
Refactor PronounsPlugin to improve command handling and color management. Update methods for setting and removing pronouns, and enhance gradient support.